# TraxManiaMapAI

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
config/: settings.example.yaml
data/benchmarks/: README.md  TEMPLATE.yaml  benchmark-manifest.schema.json
data/fixtures/: README.md
docker/: docker-compose.yml
docs/: architecture.md  benchmark-policy.md  data-contracts.md  evaluation-plan.md  roadmap.md  surrogate-policy.md
docs/generation/: generation-scope-v0.md  minimal-ai-generator-v0.md
docs/learning/: corpus-finishable-axiom.md  corridor-diversity-metrics.md  label-quality-weighted-training.md  replay-coverage-expansion-plan.md  time-envelope-label-v2.md
docs/reverse-engineering/: tm2020-replay-telemetry-spike.md
docs/workstreams/: corridor-inference.md  corridor-prereq-2-traversability.md  openplanet-telemetry.md
migrations/mariadb/: 000_bootstrap.sql  001_ingestion_snapshots.sql  002_stage_runs.sql  003_maps.sql  004_block_placements.sql  005_replays.sql  006_replay_features.sql  007_route_artifacts.sql  008_evaluation_artifacts.sql  009_replay_clean_diagnostics.sql  010_block_placements_free_blocks.sql  011_maps_scenery_metadata.sql  012_block_placements_widen_type.sql  013_maps_tmx_quality_signals.sql  014_replays_breadcrumbs_sidecar.sql  015_map_checkpoints.sql  016_traversability_edge_evidence.sql  017_route_corridors.sql  018_route_corridors_confidence.sql  019_route_corridors_learned_score.sql  020_model_metrics.sql  021_map_finishability_proof.sql  022_block_pair_transitions.sql  023_block_triple_transitions.sql  024_block_geometry.sql  025_route_corridors_sequence_score.sql  026_block_geometry_v1_1.sql  027_corpus_published_proof.sql  README.md
migrations/neo4j/: 000_bootstrap.cypher  001_block_node.cypher  002_adjacency_edge.cypher  003_processed_map.cypher  004_traversability_state.cypher  README.md
openplanet-plugin/AIReplayTelemetry/: Main.as  README.md  info.toml
openplanet-plugin/AIRouteTelemetry/: Main.as  README.md  info.toml
parsers/: .gitignore  README.md
parsers/gbx-wrapper/: BlockInfoDump.cs  Diagnose.cs  ErrorCodes.cs  GbxWrapper.csproj  MapBuilder.cs  MapEmitter.cs  MapParser.cs  PakProbe.cs  Program.cs  ReplayParser.cs
scripts/: backfill_tmx_meta.py  backfill_waypoints.py  bootstrap_dev.sh  generate_benchmark_manifests.py  run_eval.sh  run_ingest.sh  run_pipeline.sh  scale_summary.py
src/benchmarks/: README.md  __init__.py  __main__.py  manifest.py
src/cli/: README.md  __init__.py  __main__.py  audit_commands.py
src/constraints/: README.md  __init__.py  block_geometry.py  block_transitions.py  evidence.py  extractor.py  nodes.py  pipeline.py  sequence_scoring.py
src/corridor/: __init__.py  corridor_scoring_pipeline.py  scoring.py
src/coverage/: __init__.py  replay_value.py  report.py
src/diversity/: __init__.py  metrics.py  report.py
src/evaluation/: README.md  __init__.py  base.py  registry.py  versioning.py
src/generation/: __init__.py  ai_generator.py  assembly.py  finishability.py  finishability_proof.py  gbx_writer.py  generated_map.schema.json  generator.py  geom_validator.py  jump_validator.py  preemit.py  replay_cells.py  schema.py  strip_diagnostics.py  stripper.py  types.py
src/ingestion/: __init__.py  artifacts.py  cache.py  http.py  orchestrator.py  rate_limit.py  tmx.py
src/learning/: __init__.py  compare_snapshots.py  metrics_persistence.py  scores.py
src/parsers/: README.md  __init__.py  base.py  errors.py  pipeline.py  subprocess_parser.py
src/remote_test/: __init__.py  models.py  server.py  storage.py
src/remote_test_agent/: README.md  __init__.py  agent.example.yaml  agent.py  config.py  http_client.py  plugin_io.py
src/replay/: README.md  __init__.py  breadcrumbs.py  classify.py  cohorts.py  pipeline.py  telemetry.py
src/route/: README.md  __init__.py  artifact.py  extract.py  pipeline.py  projection.py
src/schema/: __init__.py  maps.py  provenance.py  replays.py  routes.py
src/storage/: __init__.py  __main__.py  mariadb.py  neo4j_adapter.py
src/utils/: __init__.py  config.py
tests/integration/: conftest.py  test_constraints_pipeline.py  test_eval_dryrun.py  test_ingestion.py  test_parse_maps.py  test_replay_clean.py  test_route_pipeline.py
tests/unit/: _breadcrumb_builders.py  _telemetry_builders.py  test_artifacts.py  test_benchmark_manifest.py  test_breadcrumbs.py  test_cache.py  test_classify.py  test_cli_test_in_game.py  test_cohorts.py  test_compare_snapshots.py  test_config.py  test_config_env.py  test_constraints_block_geometry.py  test_constraints_block_transitions.py  test_constraints_evidence.py  test_constraints_extractor.py  test_constraints_nodes.py  test_constraints_sequence_scoring.py  test_corridor_classification.py  test_corridor_enumeration.py  test_corridor_evidence.py  test_corridor_labeling.py  test_corridor_ranking.py  (+57 more)
(+66 files in other folders)
