[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trackmania-ai"
version = "0.0.1"
description = "Trackmania 2020 AI track generator — Phase 1 substrate (mapper-assist)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "TraxManiaMapAI" }]

# Runtime deps are intentionally empty in PR 1. Real deps land in PR 2/3
# when the evaluator scaffold, config loader, and ingestion layer start
# requiring them.
dependencies = []

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
