[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trackmania-ai"
version = "0.0.1"
description = "Trackmania 2020 AI track generator — Phase 1 substrate (mapper-assist)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "TraxManiaMapAI" }]

# Runtime deps are kept minimal. Each addition is load-bearing for a
# landed PR — no aspirational dependencies.
#   pyyaml, jsonschema — benchmark manifest loader + schema validation (PR 2).
#   pymysql           — MariaDB driver for schema migrations + ingestion (PR 3).
#   requests          — TMX HTTP client (PR 3).
#   numpy             — vector math for replay projection + clustering (PR 5).
# scikit-learn is an OPTIONAL dep used by the DBSCAN adapter; install via
# `pip install -e ".[learn]"` when needed. Evaluator PR 7 will add the
# remaining numerical stack (scipy, pandas, etc.) if required.
dependencies = [
  "pyyaml>=6.0,<7",
  "jsonschema>=4.21,<5",
  "pymysql>=1.1,<2",
  "requests>=2.31,<3",
  "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "responses>=0.25,<1",
]
# Optional ML stack. Install with: pip install -e ".[learn]"
learn = [
  "scikit-learn>=1.3,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
